--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cr3sp0/insultiGame/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Gioco degli Insulti</title>
 </head>
 <body>
@@ -14,6 +14,6 @@
         <br>
         <input type="button" value="inizia gioco" id="start-game" class="inizia">
     </div>
-    <script src="cr3sp0/insultiGame/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
