--- a/risultati.html
+++ b/risultati.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Risultati</title>
-    <link rel="stylesheet" href="cr3sp0/insultiGame/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
