--- a/risultati.html
+++ b/risultati.html
@@ -29,7 +29,7 @@
 
         const resultDiv = document.getElementById('result');
         const punti = document.getElementById('punti');
-        resultDiv.textContent = arr.join(', ');
+        resultDiv.textContent = "Alessio è proprio " + arr.join(', ');
         punti.textContent = "punti: " + length;
     </script>
 </body>
